@@ -1,4 +1,4 @@
-c0bb1edd01e86ba0cba5532eabfc7452 *DESCRIPTION
+0b53dc0e59732a30a23ff50d37f1e1d9 *DESCRIPTION
 ed5cc1380a6c05d376b5df113c24ea9b *NAMESPACE
 5986e6402724232d4b66a8f2cd6af77b *NEWS
 b36ac435e05cae710372bdb74c8c3293 *R/BaumWelch.R
@@ -23,7 +23,7 @@ f8c8071cc833bc48c8247544a6b61d9c *R/Mstep.norm.R
 a1e717f7372f8434f3d61b2e1198a7a1 *R/Mstep.pois.R
 dc42a133d95a09833fb4f97af74ca646 *R/Pi2vector.R
 1783f01a0d38807707960dd91eec2488 *R/Q2vector.R
-428821f286549ac38548d8f6701298b7 *R/Viterbi.R
+603544d25b673009d23b4fc240434c4d *R/Viterbi.R
 9d8569d9a3c58333b0deae379d6d9e00 *R/Viterbi.dthmm.R
 056eaa236a5f7bf1356298a4a5aa9827 *R/Viterbi.mmglm0.R
 07a5e909c17ad145ec7e7b87ce2dcbd8 *R/Viterbi.mmglm1.R
@@ -80,21 +80,21 @@ a5670e6a8b4712b60b8ee8268f764b25 *R/summary.mmglm1.R
 3f1b9c5d8e2272780ad40a417b578fa8 *R/summary.mmpp.R
 864fc25551cf9cd206d1cbe2f081daec *R/vector2Pi.R
 befe46c5ea55a55167939fdb2c8901c5 *R/vector2Q.R
-8ad672222f02cef80668525b381b0fc1 *build/partial.rdb
+76161b65639451c966be75488458b3c3 *build/partial.rdb
 64d3eb2498905f047b07d4b32dfd7e5c *demo/00Index
 f1975359a0e73f39fb3f064c9ce5033b *demo/beta.R
 901c94928a6e4cc0a5c587537fa44cce *demo/gamma.R
 bfee2e728683d14aba32abdbcd7c0883 *demo/lnorm.R
 890f3cd71b860f6a19233c5cbfc37f22 *demo/logis.R
 0f808acf3f40e8df57d84906e9c816e4 *demo/norm.R
-78dbf968c06379f63ec270565efeda51 *inst/CITATION
+969820f0d948bbf6c8e86d48e3318bba *inst/CITATION
 efff4eb5b4f4637f9efeaeb6d930a537 *inst/doc/index.html
 8ab978754ea52dcae4b87e0ade8f9b95 *man/BaumWelch.Rd
-cb62b04281c8bf034cd19e0c1a0d5476 *man/Changes.Rd
+84faeba3c960a8eb0df8b3085bd9e777 *man/Changes.Rd
 69e9392ae7ec514b115a4e47c83abeb3 *man/Demonstration.Rd
 e055514980070bfeab459d960eb967bc *man/Estep.Rd
 259d9b8830abf98c98c091b2e8168bf1 *man/HiddenMarkov-defunct.Rd
-1279c1a0ad1f56c1e1b1716a05b2abb7 *man/HiddenMarkov-dthmm-deprecated.Rd
+4ece624ba833f9d92069434633a36c9d *man/HiddenMarkov-dthmm-deprecated.Rd
 46a03a92b90e340e4607892fd48f7fe1 *man/HiddenMarkov-internal.Rd
 e84d3bb4d8054b3c8915fd08d7d60d17 *man/HiddenMarkov-mmpp-deprecated.Rd
 850768aaf4b0140ee10149f6a3a24f91 *man/HiddenMarkov.Rd
