@@ -1,7 +1,8 @@
 Viterbi <- function (object, ...){
-    if (class(object)=="numeric")
+    if (inherits(object, "numeric"))
         do.call(Viterbihmm, list(object, ...))
-    else if (class(object)=="mmpp") stop("Viterbi does not yet have a method for objects of class 'mmpp'.")
+    else if (inherits(object, "mmpp"))
+        stop("Viterbi does not yet have a method for objects of class 'mmpp'.")
     else UseMethod("Viterbi")
 }
 
